fix sideNav scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,27 @@
   }
 }
 
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    display: none;
+    /* width: 5px; */
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #cbe2f1;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #94c4ec;
+    border-radius: 100vh;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #45a5f4;
+  }
+}
+
 html {
   scroll-behavior: smooth;
 }
